# big-map-archive

./: .gitignore  .invenio  Pipfile  README.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  permissions.py
app_data/: communities.yaml  pages.yaml  users.json  vocabularies.yaml
app_data/pages/: tutorial.html
app_data/vocabularies/: affiliations_ror.yaml  funders.yaml  (+10 more)
backup/: backup.sh  copy_backup_to_os.py  copy_dump_to_os.py  dump_db.sh  restore_backup.py  restore_db.sh  restore_db_es.py  restore_indexes.sh
migration/: migrate.sh  migrate_11_0_to_12_0.py  migrate_bigmap.py  run_migration.sh
override/: ShareModal_overridable.js  override.sh
scripts/: register_users.py
site/: .gitkeep  setup.cfg
site/big_map_archive/: api.py  cli.py  config.py  deposits.py  ext.py  generators.py  infos.py  permissions.py  utils.py  views.py  webpack.py
site/big_map_archive/templates/semantic-ui/big_map_archive/: disclaimer.html  faqs.html  license.html  share_links.html  tutorial.html
site/inveniordm/: views.py  webpack.py
tests/: conftest.py  helpers.py  test_api_community.py  test_api_members.py  test_api_record.py  test_api_requests.py  test_api_reviews.py  test_api_secret_links.py  test_secret_links.py
user_training/: getting_started_with_big-map-archive.md
utils/: banners.py  confirm_account.py  create_account_and_confirm.py  create_accounts_and_confirm.py  create_demo_users.py  create_group.py  create_users.json_from_excel_file.py  create_users_from_file.py  register_user.py  register_users.py  users_batman2023.json
(+94 files in other folders)
