
[metadata]
name = big-map-archive

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    big_map_archive_views = big_map_archive.views:create_blueprint
invenio_assets.webpack =
    big_map_archive_theme = big_map_archive.webpack:theme
